<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>cam</name>
  <version>0.1.0</version>
  <description>The CAM package to generate path in 3D space</description>

  <author email="qiao.li@zju.edu.cn">Qiao Li</author>
  <maintainer email="qiao.li@zju.edu.cn">Qiao Li</maintainer>
  <license>BSD 3-Clause</license>

  <exec_depend>math</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>vtk</exec_depend>
  <export>
      <build_type>ament_python</build_type>
  </export>

</package>
