<?xml version="1.0" ?>
<package format="2">
  <name>abb_support</name>
  <version>0.0.0</version>
  <description>
    <p>
      ROS-Industrial support for the ABB IRB 1600 (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for ABB IRB 1600 manipulators. This currently includes the IRB 1600-10/1.2.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in the
      <em>ABB IRB 1600 Datasheet</em>, document ID: <em>ROB0275EN_A, June 2023</em>.
      All urdfs / xacros are based on the default motion and joint velocity
      limits, unless noted otherwise (ie: no support for high speed joints,
      extended / limited motion ranges or other options).
    </p>
    <p>
      Note 1: inertial and dynamics values for the 10/1.2 variant were calculated
      from the meshes using <em>Meshlab</em>, assuming constant density.
      As the datasheet only provides the mass of the entire robot,
      the mass of each link was estimated based on its volume, assuming
      constant density for the entire robot.
    </p>
    <p>
      Note 2: maximum joint effort values for the 10/1.2 variant do not
      correspond to real world limits of the robot. The current values were
      chosen to accomodate Gazebo simulations of this specific variant but
      are fictional values.
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Qiao Li (Zhejiang University)</author>
  <maintainer email="qiao.li@zju.edu.cn">Qiao Li (Zhejiang University)</maintainer>
  <license>Apache2</license>

  <url type="website">http://wiki.ros.org/abb_irb1600_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/abb_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/abb_experimental</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
    <!-- <architecture_independent/> -->
  </export>
</package>
