<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>baldor</name>
  <version>0.1.2</version>
  <description>The baldor package</description>

  <author email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</author>
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD 3-Clause</license>
  <url type="website">http://wiki.ros.org/baldor</url>
  <url type="repository">https://github.com/crigroup/baldor</url>
  <url type="bugtracker">https://github.com/crigroup/baldor/issues</url>

  <exec_depend>python-numpy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
      <build_type>ament_python</build_type>
  </export>

</package>
