<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>handeye</name>
  <version>0.1.1</version>
  <description>The handeye package</description>

  <author email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</author>
  <maintainer email="fsuarez6@gmail.com">Francisco Suarez-Ruiz</maintainer>
  <license>BSD 3-Clause</license>
  <url type="website">http://wiki.ros.org/handeye</url>
  <url type="repository">https://github.com/crigroup/handeye</url>
  <url type="bugtracker">https://github.com/crigroup/handeye/issues</url>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>baldor</exec_depend>
  <exec_depend>criutils</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python-enum34</exec_depend>
  <exec_depend>python-matplotlib</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-scipy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
